added translations for messages

--- a/ProgFInalProject/src/progfinalproject/MessagesBundle.properties
+++ b/ProgFInalProject/src/progfinalproject/MessagesBundle.properties
@@ -2,7 +2,27 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-greetings = Welcome to B.A.M.S. or the Bank Account Management System
-inquiry = Below, please enter the type of user you are. Enter 'T' for Teller, and 'C' for Client.
-farewell = Finally, if you would like to close the program, enter 'X'.
+greetings = Welcome to B.A.M.S. or the Bank Account Management System.
+            Below, please enter the type of user you are. Enter 'T' for Teller, and 'C' for Client. 
+            If you would like to close the program, enter 'X'.
 
+greetings1 = Welcome to the Teller system.
+            Here you'll find all the functions you may need.
+            If at any point you want to return to the welcome menu, simply type '0' in the input field.
+            Please select a function (enter the corresponding number):
+                    t1. Fetch all Clients
+                    t2. Fetch all Accounts
+                    t3. Fetch all Transactions
+                    t4. Cancel Transaction
+                    t5. Read Clients
+                    t6. Read Account
+                    t7. Read Client Transaction
+
+greetings2 = Welcome to the Client system
+            Here you'll find all the functions you may need.
+            If at any point you want to return to the welcome menu, simply type '0' in the input field
+            Please select a function (enter the corresponding number)
+
+            t1. Read Client 
+            t2. Read Client Transaction
+            t3. Read Account
