--- a/ProgFInalProject/src/progfinalproject/MessagesBundle_fr_FR.properties
+++ b/ProgFInalProject/src/progfinalproject/MessagesBundle_fr_FR.properties
@@ -2,6 +2,29 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-greetings = Bienvenue chez B.A.M.S. ou le syst\u00e8me de gestion de compte bancaire
-inquiry = Ci-dessous, veuillez entrer le type d\u2019utilisateur que vous \u00eates. Entrez \u00ab T \u00bb pour Le caissier et \u00ab C \u00bb pour le client.
-farewell = Enfin, si vous souhaitez fermer le programme, entrez 'X'.
+greetings = Bienvenue chez B.A.M.S. ou le \"Syst\u00e8me de gestion de compte bancaire\
+            Veuillez saisir ci-dessous le type d'utilisateur que vous \u00eates.
+            Entrez 'T' pour Caissier et 'C' pour Client.
+            Enfin, si vous souhaitez fermer le programme, entrez 'X'.
+
+greetings1 = Bienvenue dans le syst\u00e8me Teller.
+            Vous trouverez ici toutes les fonctions dont vous pourriez avoir besoin.
+            Si \u00e0 tout moment vous souhaitez revenir au menu d'accueil, tapez simplement '0' dans le champ de saisie.
+            Veuillez s\u00e9lectionner une fonction (entrer le num\u00e9ro correspondant) :
+                    t1. R\u00e9cup\u00e9rer tous les clients
+                    t2. R\u00e9cup\u00e9rer tous les comptes
+                    t3. R\u00e9cup\u00e9rer toutes les transactions
+                    t4. Annuler la transaction
+                    t5. Lire les clients
+                    t6. Lire le compte
+                    t7. Lire la transaction client
+
+
+greetings2 = Bienvenue dans le syst\u00e8me client
+            Vous trouverez ici toutes les fonctions dont vous pourriez avoir besoin.
+            Si \u00e0 tout moment vous souhaitez revenir au menu d'accueil, tapez simplement '0' dans le champ de saisie
+            Veuillez s\u00e9lectionner une fonction (entrer le num\u00e9ro correspondant)
+
+            t1. Lire le client
+            t2. Lire la transaction client
+            t3. Lire le compte
