--- a/ProgFInalProject/src/progfinalproject/MessagesBundle_en_US.properties
+++ b/ProgFInalProject/src/progfinalproject/MessagesBundle_en_US.properties
@@ -2,25 +2,65 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-greetings = Welcome to B.A.M.S. or the Bank Account Management System. Below, please enter the type of user you are. Enter 'T' for Teller, and 'C' for Client. If you would like to close the program, enter 'X'.
+# greetings messages
+key1 = Welcome to B.A.M.S. or the "Bank Account Management System"
+key2 = Below, please enter the type of user you are
+key3 = Enter 'T' for Teller, and 'C' for Client.
+key4 = Finally, if you would like to close the program, enter 'X'. If you want to return to the main menu at any point, select 0
 
-greetings1 = Welcome to the Teller system.
-            Here you'll find all the functions you may need.
-            If at any point you want to return to the welcome menu, simply type '0' in the input field.
-            Please select a function (enter the corresponding number):
-                    t1. Fetch all Clients
-                    t2. Fetch all Accounts
-                    t3. Fetch all Transactions
-                    t4. Cancel Transaction
-                    t5. Read Clients
-                    t6. Read Account
-                    t7. Read Client Transaction
+#authentication messages
+key5 = Enter Id
+key6 = Id invalid. Try again
+key7 = Please input only numbers.
+key29 = Enter password
+key30 = Wrong input. Try again.
+key8 = Wrong password. Try again.
+key9 = Enter Client Id
 
-greetings2 = Welcome to the Client system
-            Here you'll find all the functions you may need.
-            If at any point you want to return to the welcome menu, simply type '0' in the input field
-            Please select a function (enter the corresponding number)
+#teller pipeline
+key10 = Welcome to the Teller system.
+key11 = Here you'll find all the functions you may need.
+key12 = If at any point you want to return to the welcome menu, simply type '0' in the input field
+key13 = Please select a function (enter the corresponding number):
+key14 = read all Clients
+key15 = read all Accounts
+key16 = read all Transactions
+key17 = Cancel Transaction
+key18 = Read Clients
+key19 = Read Account
+key20 = Read Client Transaction
+key31 = Deactivate Account
+key32 = Create New Client
+key33 = Create New Account
+key34 = Create New Transactions
+key45 = Update Client Identification
+key46 = Update Client Address
+key21 = Select:
+key22 = Enter transaction id
+key23 = Enter client id
+key24 = Enter account id
 
-            t1. Read Client 
-            t2. Read Client Transaction
-            t3. Read Account
+
+#client pipeline
+key25 = Welcome to the Client system
+key26 = Read Client
+key27 = Client Transaction
+key28 = Read Account
+
+#user input for teller
+key35 = Enter client's first name:
+key36 = Enter client's last name:
+key37 = Enter client identification:
+key38 = Enter client address:
+key39 = Enter account type. Choose between checking or savings account:
+key40 = Enter account id destination:
+key41 = Enter account id sender:
+key42 = Enter transaction description:
+key43 = Enter transaction value in double decimal format:
+key44 = This account can not send transaction as it does not have enough money.
+key48 = Update Successful!
+
+
+
+
+
