--- a/ProgFInalProject/src/progfinalproject/MessagesBundle_fr_FR.properties
+++ b/ProgFInalProject/src/progfinalproject/MessagesBundle_fr_FR.properties
@@ -2,29 +2,58 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-greetings = Bienvenue chez B.A.M.S. ou le \"Syst\u00e8me de gestion de compte bancaire\
-            Veuillez saisir ci-dessous le type d'utilisateur que vous \u00eates.
-            Entrez 'T' pour Caissier et 'C' pour Client.
-            Enfin, si vous souhaitez fermer le programme, entrez 'X'.
+key1 = Bienvenue à B.A.M.S. ou le "Bank Account Management System".
+key2 = Ci-dessous, veuillez entrer le type d'utilisateur que vous êtes
+key3 = Entrez 'T' pour Teller, et 'C' pour Client.
+key4 = Enfin, si vous souhaitez fermer le programme, entrez 'X'. Si vous souhaitez revenir au menu principal à tout moment, sélectionnez 0.
 
-greetings1 = Bienvenue dans le syst\u00e8me Teller.
-            Vous trouverez ici toutes les fonctions dont vous pourriez avoir besoin.
-            Si \u00e0 tout moment vous souhaitez revenir au menu d'accueil, tapez simplement '0' dans le champ de saisie.
-            Veuillez s\u00e9lectionner une fonction (entrer le num\u00e9ro correspondant) :
-                    t1. R\u00e9cup\u00e9rer tous les clients
-                    t2. R\u00e9cup\u00e9rer tous les comptes
-                    t3. R\u00e9cup\u00e9rer toutes les transactions
-                    t4. Annuler la transaction
-                    t5. Lire les clients
-                    t6. Lire le compte
-                    t7. Lire la transaction client
+#Messages d'authentification
+key5 = Entrez l'Id
+key6 = Id invalide. Essayez à nouveau
+key7 = Veuillez saisir uniquement des chiffres.
+key29 = Entrez le mot de passe
+key30 = Entrée incorrecte. Essayez à nouveau.
+key8 = Mot de passe erroné. Essayez à nouveau.
+key9 = Entrez l'identité du client
 
+#Pipeline Teller
+key10 = Bienvenue dans le système Teller.
+key11 = Vous trouverez ici toutes les fonctions dont vous pouvez avoir besoin.
+key12 = Si vous souhaitez à tout moment revenir au menu d'accueil, tapez simplement '0' dans le champ de saisie.
+key13 = Veuillez sélectionner une fonction (entrez le numéro correspondant) :
+key14 = lire tous les clients
+key15 = lire tous les comptes
+key16 = lire toutes les transactions
+key17 = Annuler une transaction
+key18 = Lire les clients
+key19 = Lire le compte
+key20 = Lire la transaction du client
+key31 = Désactiver le compte
+key32 = Créer un nouveau client
+key33 = Créer un nouveau compte
+key34 = Créer de nouvelles transactions
+key45 = Mettre à jour l'identification du client
+key46 = Mise à jour de l'adresse du client
+key21 = Sélectionner :
+key22 = Entrer l'identifiant de la transaction
+key23 = Entrer l'identifiant du client
+key24 = Entrer l'identifiant du compte
 
-greetings2 = Bienvenue dans le syst\u00e8me client
-            Vous trouverez ici toutes les fonctions dont vous pourriez avoir besoin.
-            Si \u00e0 tout moment vous souhaitez revenir au menu d'accueil, tapez simplement '0' dans le champ de saisie
-            Veuillez s\u00e9lectionner une fonction (entrer le num\u00e9ro correspondant)
+#pipeline client
+key25 = Bienvenue dans le système Client
+key26 = Lire le client
+key27 = Transaction du client
+key28 = Lire le compte
 
-            t1. Lire le client
-            t2. Lire la transaction client
-            t3. Lire le compte
+#Entrée utilisateur pour le guichet
+key35 = Entrez le prénom du client :
+key36 = Entrer le nom de famille du client :
+key37 = Entrer l'identification du client :
+key38 = Entrer l'adresse du client :
+key39 = Entrer le type de compte. Choisissez entre compte chèque ou compte épargne :
+key40 = Entrer la destination de l'identifiant du compte :
+key41 = Entrer l'identifiant de compte de l'expéditeur :
+key42 = Entrer la description de la transaction :
+key43 = Entrez la valeur de la transaction en format double décimal :
+key44 = Ce compte ne peut pas envoyer de transaction car il n'a pas assez d'argent.
+key48 = Mise à jour réussie !
