--- a/ProgFInalProject/src/progfinalproject/MessagesBundle_en_US.properties
+++ b/ProgFInalProject/src/progfinalproject/MessagesBundle_en_US.properties
@@ -48,17 +48,19 @@ key27 = Client Transaction
 key28 = Read Account
 
 #user input for teller
-key35 = Enter client's first name:
-key36 = Enter client's last name:
-key37 = Enter client identification:
-key38 = Enter client address:
+key35 = Enter client's first name (no space):
+key36 = Enter client's last name (no space):
+key37 = Enter client identification (no space):
+key38 = Enter client address (no space):
 key39 = Enter account type. Choose between checking or savings account:
 key40 = Enter account id destination:
 key41 = Enter account id sender:
-key42 = Enter transaction description:
+key42 = Enter transaction description (no space):
 key43 = Enter transaction value in double decimal format:
 key44 = This account can not send transaction as it does not have enough money.
 key48 = Update Successful!
+key49 = Cannot deactivate account with a balance of 0/Account already deactivated
+key50 = Account successfully deactivated
 
 
 
