--- a/ProgFInalProject/src/progfinalproject/MessagesBundle_fr_FR.properties
+++ b/ProgFInalProject/src/progfinalproject/MessagesBundle_fr_FR.properties
@@ -46,14 +46,16 @@ key27 = Transaction du client
 key28 = Lire le compte
 
 #Entrée utilisateur pour le guichet
-key35 = Entrez le prénom du client :
-key36 = Entrer le nom de famille du client :
-key37 = Entrer l'identification du client :
-key38 = Entrer l'adresse du client :
+key35 = Entrez le prénom du client (pas d'espace):
+key36 = Entrer le nom de famille du client (pas d'espace) :
+key37 = Entrer l'identification du client (pas d'espace):
+key38 = Entrer l'adresse du client (pas d'espace):
 key39 = Entrer le type de compte. Choisissez entre compte chèque ou compte épargne :
 key40 = Entrer la destination de l'identifiant du compte :
 key41 = Entrer l'identifiant de compte de l'expéditeur :
-key42 = Entrer la description de la transaction :
+key42 = Entrer la description de la transaction (pas d'espace):
 key43 = Entrez la valeur de la transaction en format double décimal :
 key44 = Ce compte ne peut pas envoyer de transaction car il n'a pas assez d'argent.
-key48 = Mise à jour réussie !
+key48 = Mise à jour réussie!
+key49 = Impossible de désactiver le compte avec un solde de 0/Compte déjà désactivé
+key50 = Compte désactivé avec succès
